# extrucal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.html  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/extrucal/: __init__.py  cable_extrusion.py  extrucal.py  extrusion.py  rod_extrusion.py  sheet_extrusion.py  tube_extrusion.py
tests/: test_cable_extrusion.py  test_extrucal.py  test_extrusion.py  test_rod_extrusion.py  test_sheet_extrusion.py  test_tube_extrusion.py
